added transaction part and buttons are working now you can change each area

--- a/home.html
+++ b/home.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <main class="flex mx-auto">
+    <main class="flex mx-auto mt-20">
         <!-- phone -->
         <div class="mockup-phone border-primary">
             <div class="camera"></div>
             <div class="display">
-                <div class="artboard artboard-demo phone-3">
+                <div class="artboard artboard-demo phone-4 ">
                     <!-- stat -->
                     <div class="stats shadow">
                         <div class="stat">
@@ -67,7 +67,7 @@
                     </div>
                     <!--add money form -->
                     <!--Cash out form -->
-                    <div id="cashout-section" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl hidden">
+                    <div id="cashOut-section" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl hidden">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
@@ -120,7 +120,7 @@
                     </div>
                     <!--transfer form -->
                     <!--get Bonus form -->
-                    <div id="get-bonus-section" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="get-bonus-section" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl hidden">
                         <h2 class="text-center text-xl pt-2 text-blue-700 font-bold">Write "102024" to <br> get 10% on your account</h2>
                         <form class="card-body">
                             <div class="form-control">
